<resources>
    <string name="app_name">Tick</string>
    <string name="activity_create_note_input_note_title_hint">Note Title</string>
    <string name="activity_create_note_input_note_subtitle_hint">Subtitle</string>
    <string name="activity_create_note_input_note_text_hint">Type note here..</string>
    <string name="activity_main_text_my_note_text">My Notes</string>
    <string name="activity_main_text_log_out">Log out</string>
    <string name="activity_main_input_search_hint">Search notes</string>
    <string name="layout_add_url_text_add_url_title_text">Add URL</string>
    <string name="layout_add_url_input_url_hint">Enter URL</string>
    <string name="layout_add_url_text_add_text">ADD</string>
    <string name="layout_add_url_text_cancel_text">CANCEL</string>
    <string name="layout_login_email">Email</string>
    <string name="layout_reset_pw_email">Enter your email</string>
    <string name="button_continue">Continue</string>
    <string name="forgotpass"><u>Forgot password?</u></string>
    <string name="sign_up_btn">Sign up</string>
    <string name="button_signin_gg">Sign in with Google</string>
    <string name="layout_login_password">Password</string>
    <string name="layout_retype_password">Re-type password</string>
    <string name="layout_reset_pw">Reset password</string>
    <string name="layout_delete_note_text_delete_note_title_text">Delete Note</string>
    <string name="layout_delete_note_text_delete_note_message_text">Are you sure want to delete this note?</string>
    <string name="layout_log_out">Log out</string>
    <string name="layout_log_out_question">Do you want to log out?</string>
    <string name="layout_delete_note_text_delete_note_text">DELETE NOTE</string>
    <string name="layout_delete_note_text_cancel_text">CANCEL</string>
    <string name="layout_miscellaneous_text_miscellaneous_text">Miscellaneous</string>
    <string name="layout_miscellaneous_text_pick_color_text">Pick Color</string>
    <string name="layout_miscellaneous_text_add_image_text">Add Image</string>
    <string name="layout_miscellaneous_text_add_url_text">Add URL</string>
    <string name="layout_miscellaneous_text_add_time">Reminder</string>
    <string name="layout_miscellaneous_text_delete_note_text">Delete Note</string>
    <string name="layout_miscellaneous_text_alarm_text">Reminder</string>
    <string name="layout_miscellaneous_alarm_date">Date :</string>
    <string name="layout_miscellaneous_alarm_time">Time :</string>
</resources>