<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAlarmContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">


    <ImageView
        android:id="@+id/imageAlarm"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhiteTextColor" />

    <TextView
        android:id="@+id/textAlarmTitle"
        android:layout_width="171dp"
        android:layout_height="26dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/layout_miscellaneous_text_alarm_text"
        android:textColor="@color/colorWhiteTextColor"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toEndOf="@id/imageAlarm"
        app:layout_constraintTop_toTopOf="@id/imageAlarm"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/layout_miscellaneous_alarm_date"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/chooseDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/layout_miscellaneous_alarm_time"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/chooseTime"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chooseTime"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1.5"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chooseDate"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAddReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/layout_add_url_text_add_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTime" />

    <TextView
        android:id="@+id/textCancelReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/layout_add_url_text_cancel_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseDate" />


</androidx.constraintlayout.widget.ConstraintLayout>