<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageBack1"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorIcons" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="27dp"
        android:text="@string/sign_up_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/email_txt"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/layout_login_email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/colorWhiteTextColor"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pw_sign_up"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/email_txt"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/layout_login_password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/colorWhiteTextColor"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_up"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/re_pw"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/email_txt"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/layout_retype_password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/colorWhiteTextColor"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_sign_up"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/layout_sign"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/cont_btn"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up_btn"
        android:textColor="@color/lightdark"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_pw"
        app:layout_constraintVertical_bias="0.164" />


</androidx.constraintlayout.widget.ConstraintLayout>