<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="232dp"
            android:layout_height="283dp"
            android:src="@drawable/group_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="357dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/email_txt"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_vertical"
            android:hint="@string/layout_login_email"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/colorWhiteTextColor"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password"
            android:layout_width="357dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/email_txt"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_vertical"
            android:hint="@string/layout_login_password"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/colorWhiteTextColor"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="357dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/forgotpass"
                android:textColor="@color/fg_pass"
                android:textSize="18dp"
                android:textStyle="italic"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cont_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="357dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cont_btn"
            android:text="@string/button_continue"
            android:textColor="@color/lightdark"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/or_use"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cont_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gg_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="357dp"
            android:layout_height="48dp"


            android:layout_marginTop="8dp"
            android:background="@drawable/wgg_btn"
            android:fontFamily="sans-serif-light"
            android:text="@string/button_signin_gg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/title_txt"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/gg_btn"
            app:layout_constraintEnd_toEndOf="@+id/gg_btn"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="@+id/gg_btn"
            app:layout_constraintTop_toTopOf="@+id/gg_btn"
            app:layout_constraintVertical_bias="0.47"
            app:srcCompat="@drawable/google" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="357dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/signup_btn"
            android:fontFamily="sans-serif-light"
            android:text="@string/sign_up_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/lightdark"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gg_btn"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>